<resources>
    <string name="app_name">Vehicle Insurance</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="user">TextView</string>
    <string name="status">Status</string>
    <string name="currentpassword">Enter Current Password</string>
    <string name="newpassword">Enter New Password</string>
    <string name="Repeatpassword">Enter Repeat Password</string>
    <string name="changepassword">Change Password</string>
    <string name="settings">Settings</string>
    <string name="textviewemail">etemail</string>
    <string name="textviewcurrentpass">etcurrentpassword</string>
    <string name="textviewnewpassword">etnewpassword</string>
    <string name="textviewrepeatpass">etrepeatpassword</string>
    <string name="textviewres">resp</string>
    <string name="textviewetres">resp</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="claim_location">Claim Location</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="use_this_location">Use this Location ?</string>
    <string name="dialog">dialog</string>
    <string name="add_image">Add Image</string>
    <string name="change_image">Change Image</string>
    <string name="set_location">Set Location</string>
    <string name="select_location">Select Location</string>
    <string name="close">Close</string>
    <string name="location_not_set">Location not set</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
</resources>