<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textview_boxheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="30dp"
        />

    <EditText
        android:id="@+id/edit_currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/currentpassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/quantum_grey"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/edit_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/quantum_grey"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/edit_repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Repeatpassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/quantum_grey"
        android:textColorLink="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="changePassword"
            android:layout_weight="1"
            android:text="@string/change_password"
            tools:ignore="OnClick" />

        <Space
            android:layout_width="21dp"
            android:layout_height="43dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="OnClick" />
    </LinearLayout>


</LinearLayout>