<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClaimDetailActivity">

    <TextView
        android:id="@+id/status_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/status"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/status_header"
        app:layout_constraintLeft_toLeftOf="@+id/status_header"
        android:importantForAutofill="no"
        android:inputType= "text" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/description"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_status"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/description_header"
        app:layout_constraintLeft_toLeftOf="@+id/description_header"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType= "text" />

    <TextView
        android:id="@+id/location_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_description"/>

    <Button
        android:id="@+id/location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/set_location"
        app:layout_constraintTop_toBottomOf="@+id/location_header" />

    <Button
        android:id="@+id/image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/location_button"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>