<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClaimDetailActivity">

    <TextView
        android:id="@+id/status_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/status"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/status_header"
        app:layout_constraintLeft_toLeftOf="@+id/status_header" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/description"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/status_text"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/description_header"
        app:layout_constraintLeft_toLeftOf="@+id/description_header" />
    <TextView
        android:id="@+id/location_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/description_text"/>

    <Button
        android:id="@+id/location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/location_header"
        app:layout_constraintLeft_toLeftOf="@+id/location_header" />

    <ImageView
        android:id="@+id/claim_image"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:layout_height="280dp"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onEditClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>